<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newEntryFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wood1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <AutoCompleteTextView
                        android:id="@+id/grapeAutoComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dip"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/newEntry_grape"
                        android:textColorHint="@color/white" >

                        <requestFocus />
                    </AutoCompleteTextView>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/newEntry_location"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/vintageYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/newEntry_vintage"
                        android:inputType="number"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/newEntry_category"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/newEntry_region"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/comments"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:ems="13"
                        android:gravity="top|left|center_vertical"
                        android:hint="@string/newEntry_comment"
                        android:inputType="textMultiLine"
                        android:textColorHint="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/ratingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newEntry_rating"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="145dp"
                        android:layout_marginRight="145dp"
                        android:layout_marginTop="0dp"
                        android:max="5"
                        android:numStars="5"
                        android:rating="0.0"
                        android:stepSize="0.5" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/new_entry_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/newEntry_submit" />
                </TableRow>
            </TableLayout>
        
    </ScrollView>

</LinearLayout>